[package]
name = "twitch-gamepad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
chrono = "0.4.26"
duration-str = "0.5.1"
nix = "0.26.2"
reqwest = "0.11.18"
rusqlite = { version = "0.29.0", features = ["chrono"] }
serde = "1.0.166"
strum = "0.25.0"
strum_macros = "0.25.1"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
twitch-irc = { version = "5.0.0", features = ["refreshing-token-native-tls"] }
uinput = { version = "0.1.3" }
